[lab3] updated handles and swagger
